Refactor backend/frontend, create a base framework
General:
- Comment PSQL from docker compose - we're not using it, why to run it?
- Reafactor Dockerfiles - add hot reload on change
- Dont build UI to enable hot reload

Back:
- Remove services - no need to overengineer. Stick with api and
  controllers for now
- Use oakCors instead of direct headers on each request
- Remove if/else for api calls - use api endpoints separatelly - one
  request - one api endpoint is used
- Extract constants into env.ts

Front:
- Use vue3 naming conventions for views
- Use axios instead of fetch
- Add api.py to centralize requests logic
- Add env.ts for constants and env variables
- Rename multiple vars in TheInfoView - variables should mean something.
  Code should document itself. "message" var name is very generic.
  "infoFromBackend" - is more precise. Also you could find it related with
  "handleGetInfoButtonClick" and "mainApi.getInfo".

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,27 @@
-# Use the official Deno image
-FROM denoland/deno:alpine-1.35.3
+# COMMENT: Why to use so old version of Deno?
+FROM denoland/deno:alpine-2.1.4
 
 # Set the working directory
 WORKDIR /app
 
-# Copy the necessary files for the backend
-COPY . .
-
+# COMMENT: We are not using PostgreSQL now, why to install the client?
 # Install PostgreSQL client
 RUN apk add --no-cache postgresql-client
 
-# Cache the backend dependencies
-RUN deno cache /app/backend/main.ts
+# Copy deno.json and deno.lock first to leverage Docker cache
+COPY deno.json deno.lock* ./
+
+# Cache the dependencies without lockfile initially
+RUN deno cache --reload main.ts || true
+
+# Copy the rest of the backend files
+COPY . ./
+
+# Cache the backend dependencies again with all files
+RUN deno cache main.ts
 
 # Expose the application port
 EXPOSE 8000
 
-# Run the backend
-CMD ["run", "--allow-net", "--allow-read", "backend/main.ts"]
+# Run the backend with watch mode for hot reload
+CMD ["deno", "run", "--allow-net", "--allow-read", "--allow-env", "--watch", "main.ts"]
