--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,29 +1,12 @@
-# Use the latest stable Node.js image for building the frontend
-FROM node:20-alpine as build
+# COMMENT: There is no need to use nginx as part of frontend dockerfile
+# Main concern here is responsibility of the container - it should be only for frontend
+# Also its great to have hot-reload for development - building frontend disables that and requires rebuild on each change
+FROM node:22-alpine
 
-# Set the working directory
-WORKDIR /app/frontend
+WORKDIR /app
 
-# Copy package.json and package-lock.json first to leverage Docker cache
-COPY frontend/package.json frontend/package-lock.json ./
-
-# Install dependencies
+COPY package*.json ./
 RUN npm install
 
-# Copy the rest of the frontend files
-COPY frontend ./
-
-# Build the frontend
-RUN npm run build
-
-# Use Nginx to serve the built frontend
-FROM nginx:alpine
-
-# Copy the built frontend files to Nginx's default html directory
-COPY --from=build /app/frontend/dist /usr/share/nginx/html
-
-# Expose the default Nginx port
-EXPOSE 80
-
-# Start Nginx
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT []
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
