--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,16 +1,29 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --watch main.ts",
+    "db:generate": "deno run --node-modules-dir -A --env npm:drizzle-kit generate",
+    "db:push": "deno run --node-modules-dir -A --env npm:drizzle-kit push"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "drizzle-orm/": "npm:drizzle-orm@^0.44.3/",
+    "drizzle-orm/node-postgres": "npm:drizzle-orm@^0.44.3/node-postgres",
+    "drizzle-orm/pg-core": "npm:drizzle-orm@^0.44.3/pg-core",
+    "drizzle-kit": "npm:drizzle-kit@^0.31.4",
+    "pg": "npm:pg@^8.11.3"
   },
   "compilerOptions": {
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "lib": [
+      "deno.ns",
+      "dom"
+    ]
   },
   "lint": {
     "rules": {
-      "exclude": ["no-explicit-any"]
+      "exclude": [  
+        "no-explicit-any"
+      ]
     }
   }
 }
