--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,11 +34,13 @@ services:
       - frontend
       - backend
 
-  # db:
-  #   image: postgres:15
-  #   environment:
-  #     POSTGRES_USER: "postgres"
-  #     POSTGRES_PASSWORD: "postgres"
-  #     POSTGRES_DB: "postgres"
-  #   ports:
-  #     - "5432:5432"
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    ports:
+      - "5432:5432"
+    env_file:
+      - .env
