--- a/backend/deno.json
+++ b/backend/deno.json
@@ -2,7 +2,8 @@
   "tasks": {
     "dev": "deno run --watch main.ts",
     "db:generate": "deno run --node-modules-dir -A --env npm:drizzle-kit generate",
-    "db:push": "deno run --node-modules-dir -A --env npm:drizzle-kit push"
+    "db:push": "deno run --node-modules-dir -A --env npm:drizzle-kit push",
+    "db:seed": "deno run -A --env db/seed.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
@@ -10,7 +11,8 @@
     "drizzle-orm/node-postgres": "npm:drizzle-orm@^0.44.3/node-postgres",
     "drizzle-orm/pg-core": "npm:drizzle-orm@^0.44.3/pg-core",
     "drizzle-kit": "npm:drizzle-kit@^0.31.4",
-    "pg": "npm:pg@^8.11.3"
+    "drizzle-orm/postgres-js": "npm:drizzle-orm@^0.44.3/postgres-js",
+    "postgres": "npm:postgres@^3.4.4"
   },
   "compilerOptions": {
     "noImplicitAny": false,
