--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/app
-    # depends_on:
-    #   - db
+    env_file:
+      - .env
+    depends_on:
+      - db
 
   frontend:
     build:
