--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 services:
   backend:
+    networks:
+      - nika-bridge
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -7,12 +9,15 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/app
+      - /app/node_modules 
     env_file:
       - .env
     depends_on:
       - db
 
   frontend:
+    networks:
+      - nika-bridge
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -27,6 +32,8 @@ services:
       - /app/node_modules
 
   nginx:
+    networks:
+      - nika-bridge
     image: nginx:alpine
     ports:
       - "3000:80"
@@ -37,6 +44,8 @@ services:
       - backend
 
   db:
+    networks:
+      - nika-bridge
     image: postgres:15
     environment:
       POSTGRES_USER: ${DB_USER}
@@ -46,3 +55,7 @@ services:
       - "5432:5432"
     env_file:
       - .env
+
+networks:
+  nika-bridge:
+    driver: bridge
