--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "axios": "^1.12.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-easy-data-table": "^1.5.47",
+    "vuetify": "^3.10.4"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
